--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -1,38 +1,41 @@
-echo 'name: Update arXiv Papers
+name: Update arXiv Papers
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '\''0 0 * * *'\''  # Run at midnight UTC daily
-  workflow_dispatch:      # Allow manual trigger
+    - cron: '0 0 * * *'
 
 jobs:
   update-papers:
     runs-on: ubuntu-latest
     permissions:
-      contents: write    # This is important for pushing changes
+      contents: write
     
     steps:
-    - uses: actions/checkout@v2
-    
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '\''3.x'\''
-    
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install arxiv
-    
-    - name: Create data directory
-      run: mkdir -p data
-    
-    - name: Run paper fetcher
-      run: python fetch_papers.py
-    
-    - name: Commit and push if changed
-      run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add data/papers.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update papers.json" && git push)' > .github/workflows/update-papers.yml
+      - uses: actions/checkout@v3
+      
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+      
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install arxiv
+      
+      - name: Run fetcher
+        run: |
+          mkdir -p data
+          python fetch_papers.py
+      
+      - name: Configure Git
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+      
+      - name: Commit and push
+        run: |
+          git add data/papers.json
+          git commit -m "Update papers data" || echo "No changes to commit"
+          git push
