Update workflow to handle remote changes

--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -13,6 +13,8 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -36,6 +38,7 @@ jobs:
       
       - name: Commit and push
         run: |
+          git pull origin main --rebase
           git add data/papers.json
           git commit -m "Update papers data" || echo "No changes to commit"
           git push
