--- a/.github/workflows/update-papers.yml
+++ b/.github/workflows/update-papers.yml
@@ -13,8 +13,6 @@ jobs:
     
     steps:
       - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
       
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -31,14 +29,12 @@ jobs:
           mkdir -p data
           python fetch_papers.py
       
-      - name: Configure Git
+      - name: Commit and push changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-      
-      - name: Commit and push
-        run: |
-          git pull origin main --rebase
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git stash -u
+          git pull origin main
+          git stash pop
           git add data/papers.json
-          git commit -m "Update papers data" || echo "No changes to commit"
-          git push
+          git diff --quiet && git diff --staged --quiet || (git commit -m "Update papers data" && git push)
